# Streamlit_Postgres_Docker

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
