[tool.poetry]
name = "streamlit-postgres-docker"
version = "0.1.0"
description = ""
authors = ["felipebgoncalves"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
